# tick_up

./: .gitignore  README.md  claude.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: release-apk.yml
app/: __init__.py  controller.py  main.py
docs/: index.html
src/tickup/: __init__.py  models.py  store.py  views.py
tests/: test_controller.py  test_models.py  test_store.py  test_views.py
